create services and inject them into view model instead of put everything in the viewmodel

--- a/TodoTest.xcodeproj/xcshareddata/xcschemes/TodoTest.xcscheme
+++ b/TodoTest.xcodeproj/xcshareddata/xcschemes/TodoTest.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BB2056D32BC0EE5B00C0A540"
+               BuildableName = "TodoTestTests.xctest"
+               BlueprintName = "TodoTestTests"
+               ReferencedContainer = "container:TodoTest.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
